<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@color/background"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/session_expired"
            android:textColor="@color/title2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/session_expired_msg"
            android:textColor="@color/title2"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_me_to_login"
            style="@style/BlackOutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:paddingVertical="12dp"
            android:text="@string/take_me_to_login"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_continue_as_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            style="@style/TextButton"
            android:text="@string/continue_as_guest"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>