<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary_shade_100"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/warning"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:id="@+id/ic_worning"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/warning"
                app:srcCompat="@drawable/ic_warning" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/warning_desc"
                android:textColor="@color/title2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_OK"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_button"
                android:text="@string/retry"
                android:textColor="@color/white" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>