<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_shade_100">

    <!-- Loading Spinner -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/margin_64"
        android:layout_height="@dimen/margin_64"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_shade_100">


        <LinearLayout
            android:id="@+id/medicineDetailsMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/medicineDetailsTopBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Icon button -->
                <ImageButton
                    android:id="@+id/leftIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circular_ripple"
                    android:contentDescription="@string/back"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_arrow_v2" />

                <!-- Title centered in Toolbar -->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicineDetailsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_xxsmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medicineDetailsTopBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_xxsmall">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Status: "
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:textColor="@color/google"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <include
                    android:id="@+id/MedicineDetailsDosage"
                    layout="@layout/general_info_card" />

                <include
                    android:id="@+id/MedicineDetailsTitration"
                    layout="@layout/general_info_card" />

                <include
                    android:id="@+id/MedicineCardDuration"
                    layout="@layout/duration_card" />

                <include
                    android:id="@+id/MedicationTimes"
                    layout="@layout/medication_times" />


                <Button
                    android:id="@+id/status_inverter_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:backgroundTint="@color/primary_shade_500"
                    android:text="Snooze Medication Reminder"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/stop_medication_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:backgroundTint="@color/error"
                    android:text="Stop this medication"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/isChronic_warning_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_warning"
                    android:fontFamily="@font/runda_bold"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/margin_16"
                    android:text="@string/this_is_a_medication_to_a_chronic_disease_so_it_can_t_be_stopped"
                    android:textColor="@color/hint"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
